added reddit data

--- a/fpb bert/Bert multiclass.ipynb
+++ b/fpb bert/Bert multiclass.ipynb
@@ -15,6 +15,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "xlnet based cased - 50 - 78% on 2nd epoch"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -580,8 +587,10 @@
    ],
    "source": [
     "# Create a ClassificationModel\n",
+    "cuda_available = torch.cuda.is_available()\n",
+    "\n",
     "model = ClassificationModel(\n",
-    "    \"bert\", \"bert-base-cased\", num_labels=3, args={\"reprocess_input_data\": True, \"overwrite_output_dir\": True}, use_cuda=False\n",
+    "    \"roberta\", \"distilroberta-base\", num_labels=3, args={\"reprocess_input_data\": True, \"overwrite_output_dir\": False, \"num_train_epochs\":4, \"evaluate_during_training_verbose\":True, \"evaluate_during_training\":True, \"manual_seed\":42}, use_cuda=cuda_available\n",
     ")"
    ]
   },
